--- a/style.css
+++ b/style.css
@@ -81,17 +81,17 @@ body::-webkit-scrollbar {
 }
 
 .conversion__head {
-  margin-bottom: 36px;
+  margin-bottom: 2.25rem;
   min-width: 100%;
-  padding: 30px 55px;
+  padding: 1.875rem 3.347rem;
 
   text-align: center;
   background-color: var(--main-purple);
 
   h1 {
-    margin-bottom: 30px;
+    margin-bottom: 1.875rem;
 
-    font-size: 28px;
+    font-size: 1.75rem;
     color: var(--white);
   }
 
@@ -102,25 +102,25 @@ body::-webkit-scrollbar {
   }
 
   input {
-    margin-bottom: 25px;
-    width: 117px;
-    height: 83px;
+    margin-bottom: 1.562rem;
+    width: 7.312rem;
+    height: 5.187rem;
 
     border: none;
-    border-radius: 5px;
+    border-radius: 0.31rem;
     outline: 3px solid var(--accent-purple);
     background-color: transparent;
 
-    font-size: 58px;
+    font-size: 3.625rem;
     font-weight: 900;
     color: var(--white);
     text-align: center;
   }
 
   button {
-    padding: 10px 28px;
+    padding: 0.625rem 1.75rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.31rem;
 
     font-size: 1rem;
     cursor: pointer;
@@ -134,28 +134,28 @@ body::-webkit-scrollbar {
 }
 
 .conversion__output {
-  margin-bottom: 36px;
-  padding-inline: 25px;
+  margin-bottom: 2.25rem;
+  padding-inline: 1.562rem;
   /* width: 100%; */
 
   .box {
-    padding: 20px 77px;
+    padding: 1.25rem 4.812rem;
     background-color: var(--accent-bg);
 
     &:not(:last-child) {
-      margin-bottom: 24px;
+      margin-bottom: 1.5rem;
     }
 
     h2 {
-      margin-bottom: 10px;
+      margin-bottom: 0.625rem;
       text-align: center;
-      font-size: 20px;
+      font-size: 1.25rem;
       color: var(--text-purple);
     }
 
     p {
       text-align: center;
-      font-size: 14px;
+      font-size: 0.875rem;
       color: var(--white);
     }
   }
