--- a/style.css
+++ b/style.css
@@ -64,7 +64,12 @@ body::-webkit-scrollbar {
   justify-content: center;
   align-items: center;
   background-color: var(--main-bg);
-  padding: 12.6rem 10rem;
+  padding: 12.6rem 1rem;
+
+  @media (max-width: 450px) {
+    padding: 0;
+    overflow-x: hidden;
+  }
 }
 
 .wrapper {
@@ -155,6 +160,7 @@ body::-webkit-scrollbar {
 
     p {
       text-align: center;
+      text-wrap: pretty;
       font-size: 0.875rem;
       color: var(--white);
     }
